Remove Net.ResourceDispatcherHost.PeakOutstandingRequests UMA

This is essentially a revert of http://crrev.com/2951643003.
This was a temporary UMA only to measure the impact of Loading
Dispatcher v0, and it wasn't work correctly when OOPIF is enabled.

Bug: 787866,825081
Change-Id: Icc4644d97e70a2c8a793737763a0b4ca1be55180
Reviewed-on: https://chromium-review.googlesource.com/977202
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Reviewed-by: Takashi Toyoshima <toyoshim@chromium.org>
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Commit-Queue: Kunihiko Sakamoto <ksakamoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546370}
Former-commit-id: 2304dfae66a8716045bdd5638fddf8ff8eb5002d